--- a/index.html
+++ b/index.html
@@ -1,94 +1,81 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>موقع سياحي</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>السياحة العربية</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 </head>
 <body>
 
-<!-- رأس الموقع -->
+<!-- رأس الصفحة -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" href="#">السياحة العربية</a>
   </div>
 </nav>
 
-<!-- قسم ترحيبي -->
-<header class="bg-info text-white text-center py-5">
-  <h1>مرحبًا بك في بوابتك السياحية</h1>
-  <p>استكشف أجمل المدن واحجز رحلتك الآن</p>
-</header>
+<!-- Carousel -->
+<div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://via.placeholder.com/1200x400?text=مرحبًا+بكم" class="d-block w-100" alt="مرحبًا بكم">
+    </div>
+    <div class="carousel-item">
+      <img src="https://via.placeholder.com/1200x400?text=استكشف+الرياض" class="d-block w-100" alt="الرياض">
+    </div>
+    <div class="carousel-item">
+      <img src="https://via.placeholder.com/1200x400?text=جدة+البحر+والتراث" class="d-block w-100" alt="جدة">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
 
 <!-- المدن السياحية -->
 <section class="container my-5">
-  <h2 class="text-center mb-4">أشهر المدن السياحية</h2>
+  <h2 class="text-center mb-4">مدن سياحية</h2>
   <div class="row">
     <div class="col-md-4 mb-4">
-      <div class="card">
+      <div class="card h-100">
         <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="الرياض">
         <div class="card-body">
           <h5 class="card-title">الرياض</h5>
-          <p class="card-text">العاصمة النابضة بالحياة، تجمع بين الأصالة والحداثة.</p>
+          <p class="card-text">عاصمة المملكة ومركزها التجاري، تجمع بين الأصالة والحداثة.</p>
+          <a href="#" class="btn btn-primary">استكشاف</a>
         </div>
       </div>
     </div>
     <div class="col-md-4 mb-4">
-      <div class="card">
+      <div class="card h-100">
         <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="جدة">
         <div class="card-body">
           <h5 class="card-title">جدة</h5>
-          <p class="card-text">عروس البحر الأحمر، مدينة ساحلية غنية بالتراث.</p>
+          <p class="card-text">بوابة الحرمين وعروس البحر الأحمر، مدينة ساحرة بطابعها البحري.</p>
+          <a href="#" class="btn btn-primary">استكشاف</a>
         </div>
       </div>
     </div>
     <div class="col-md-4 mb-4">
-      <div class="card">
+      <div class="card h-100">
         <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="أبها">
         <div class="card-body">
           <h5 class="card-title">أبها</h5>
-          <p class="card-text">مدينة الجبال والضباب، مثالية لقضاء عطلة صيفية.</p>
+          <p class="card-text">عاصمة الجمال الجبلي والضباب، مثالية للاسترخاء في الصيف.</p>
+          <a href="#" class="btn btn-primary">استكشاف</a>
         </div>
       </div>
     </div>
-  </div>
-</section>
-
-<!-- نموذج الحجز -->
-<section class="bg-light py-5">
-  <div class="container">
-    <h2 class="text-center mb-4">احجز رحلتك الآن</h2>
-    <form>
-      <div class="mb-3">
-        <label for="name" class="form-label">الاسم الكامل</label>
-        <input type="text" class="form-control" id="name" placeholder="أدخل اسمك">
-      </div>
-      <div class="mb-3">
-        <label for="email" class="form-label">البريد الإلكتروني</label>
-        <input type="email" class="form-control" id="email" placeholder="example@email.com">
-      </div>
-      <div class="mb-3">
-        <label for="city" class="form-label">اختر المدينة</label>
-        <select class="form-select" id="city">
-          <option>الرياض</option>
-          <option>جدة</option>
-          <option>أبها</option>
-        </select>
-      </div>
-      <div class="mb-3">
-        <label for="date" class="form-label">تاريخ الرحلة</label>
-        <input type="date" class="form-control" id="date">
-      </div>
-      <button type="submit" class="btn btn-primary">إرسال الحجز</button>
-    </form>
   </div>
 </section>
 
 <!-- تذييل -->
 <footer class="bg-dark text-white text-center py-3">
-  &copy; 2025 جميع الحقوق محفوظة - السياحة العربية
+  &copy; 2025 السياحة العربية - جميع الحقوق محفوظة
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
