--- a/index.html
+++ b/index.html
@@ -1,83 +1,78 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>السياحة العربية</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 </head>
 <body>
 
-<!-- رأس الصفحة -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <!-- الشريط العلوي -->
+  <nav class="navbar navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">السياحة العربية</span>
+    </div>
+  </nav>
+
+  <!-- السلايدر -->
+  <div id="mainCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://source.unsplash.com/900x400/?desert" class="d-block w-100" alt="صحراء">
+      </div>
+      <div class="carousel-item">
+        <img src="https://source.unsplash.com/900x400/?city,night" class="d-block w-100" alt="مدينة ليلية">
+      </div>
+      <div class="carousel-item">
+        <img src="https://source.unsplash.com/900x400/?mountains" class="d-block w-100" alt="جبال">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
+
+  <!-- بطاقات المدن -->
   <div class="container">
-    <a class="navbar-brand" href="#">السياحة العربية</a>
-  </div>
-</nav>
-
-<!-- Carousel -->
-<div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://via.placeholder.com/1200x400?text=مرحبًا+بكم" class="d-block w-100" alt="مرحبًا بكم">
-    </div>
-    <div class="carousel-item">
-      <img src="https://via.placeholder.com/1200x400?text=استكشف+الرياض" class="d-block w-100" alt="الرياض">
-    </div>
-    <div class="carousel-item">
-      <img src="https://via.placeholder.com/1200x400?text=جدة+البحر+والتراث" class="d-block w-100" alt="جدة">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
-</div>
-
-<!-- المدن السياحية -->
-<section class="container my-5">
-  <h2 class="text-center mb-4">مدن سياحية</h2>
-  <div class="row">
-    <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="الرياض">
-        <div class="card-body">
-          <h5 class="card-title">الرياض</h5>
-          <p class="card-text">عاصمة المملكة ومركزها التجاري، تجمع بين الأصالة والحداثة.</p>
-          <a href="#" class="btn btn-primary">استكشاف</a>
+    <h2 class="mb-4 text-center">مدن سياحية</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://source.unsplash.com/400x250/?riyadh" class="card-img-top" alt="الرياض">
+          <div class="card-body">
+            <h5 class="card-title">الرياض</h5>
+            <p class="card-text">عاصمة المملكة العربية السعودية وتتميز بالأبراج الحديثة.</p>
+            <a href="#" class="btn btn-primary">احجز الآن</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="جدة">
-        <div class="card-body">
-          <h5 class="card-title">جدة</h5>
-          <p class="card-text">بوابة الحرمين وعروس البحر الأحمر، مدينة ساحرة بطابعها البحري.</p>
-          <a href="#" class="btn btn-primary">استكشاف</a>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://source.unsplash.com/400x250/?jeddah" class="card-img-top" alt="جدة">
+          <div class="card-body">
+            <h5 class="card-title">جدة</h5>
+            <p class="card-text">مدينة ساحلية رائعة على البحر الأحمر.</p>
+            <a href="#" class="btn btn-primary">احجز الآن</a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="أبها">
-        <div class="card-body">
-          <h5 class="card-title">أبها</h5>
-          <p class="card-text">عاصمة الجمال الجبلي والضباب، مثالية للاسترخاء في الصيف.</p>
-          <a href="#" class="btn btn-primary">استكشاف</a>
+      <div class="col-md-4">
+        <div class="card">
+          <img src="https://source.unsplash.com/400x250/?mecca" class="card-img-top" alt="مكة">
+          <div class="card-body">
+            <h5 class="card-title">مكة</h5>
+            <p class="card-text">أقدس مدينة في الإسلام، تضم المسجد الحرام.</p>
+            <a href="#" class="btn btn-primary">احجز الآن</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</section>
 
-<!-- تذييل -->
-<footer class="bg-dark text-white text-center py-3">
-  &copy; 2025 السياحة العربية - جميع الحقوق محفوظة
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
