--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>السياحة العربية</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet"/>
 </head>
 <body>
 
-  <!-- الشريط العلوي -->
-  <nav class="navbar navbar-dark bg-primary mb-4">
+  <!-- رأس الصفحة -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">السياحة العربية</span>
     </div>
   </nav>
 
-  <!-- السلايدر -->
+  <!-- سلايدر صور -->
   <div id="mainCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://source.unsplash.com/900x400/?desert" class="d-block w-100" alt="صحراء">
+        <img src="https://images.unsplash.com/photo-1618244974921-c31b4a1b26a9?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="صحراء">
       </div>
       <div class="carousel-item">
-        <img src="https://source.unsplash.com/900x400/?city,night" class="d-block w-100" alt="مدينة ليلية">
+        <img src="https://images.unsplash.com/photo-1534278931828-56973e4c4d52?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="مدينة">
       </div>
       <div class="carousel-item">
-        <img src="https://source.unsplash.com/900x400/?mountains" class="d-block w-100" alt="جبال">
+        <img src="https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="جبال">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
@@ -36,40 +36,47 @@
     </button>
   </div>
 
-  <!-- بطاقات المدن -->
+  <!-- بطاقات المدن السياحية -->
   <div class="container">
-    <h2 class="mb-4 text-center">مدن سياحية</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://source.unsplash.com/400x250/?riyadh" class="card-img-top" alt="الرياض">
+    <h2 class="text-center mb-4">مدن سياحية</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+      <!-- الرياض -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://images.unsplash.com/photo-1608112839549-dc1c46d3de7f?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="الرياض">
           <div class="card-body">
             <h5 class="card-title">الرياض</h5>
-            <p class="card-text">عاصمة المملكة العربية السعودية وتتميز بالأبراج الحديثة.</p>
+            <p class="card-text">عاصمة المملكة العربية السعودية وتضم معالم حديثة وأسواق تراثية.</p>
             <a href="#" class="btn btn-primary">احجز الآن</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://source.unsplash.com/400x250/?jeddah" class="card-img-top" alt="جدة">
+
+      <!-- جدة -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://images.unsplash.com/photo-1593460681388-d9fd7fcd65a0?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="جدة">
           <div class="card-body">
             <h5 class="card-title">جدة</h5>
-            <p class="card-text">مدينة ساحلية رائعة على البحر الأحمر.</p>
+            <p class="card-text">مدينة ساحلية عصرية تُعرف بكورنيش البحر الأحمر والأسواق القديمة.</p>
             <a href="#" class="btn btn-primary">احجز الآن</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="https://source.unsplash.com/400x250/?mecca" class="card-img-top" alt="مكة">
+
+      <!-- مكة -->
+      <div class="col">
+        <div class="card h-100">
+          <img src="https://images.unsplash.com/photo-1601221132217-1bbf43ba3b59?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="مكة">
           <div class="card-body">
-            <h5 class="card-title">مكة</h5>
-            <p class="card-text">أقدس مدينة في الإسلام، تضم المسجد الحرام.</p>
+            <h5 class="card-title">مكة المكرمة</h5>
+            <p class="card-text">أقدس مدينة في الإسلام، تضم المسجد الحرام والكعبة المشرفة.</p>
             <a href="#" class="btn btn-primary">احجز الآن</a>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
