--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="mainCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://images.unsplash.com/photo-1618244974921-c31b4a1b26a9?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="صحراء">
+        <img src="IMG_5650.jpeg" class="d-block w-100" alt="صحراء">
       </div>
       <div class="carousel-item">
         <img src="https://images.unsplash.com/photo-1534278931828-56973e4c4d52?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="مدينة">
