--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="IMG_5650.jpeg" class="d-block w-100" alt="صحراء">
       </div>
       <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1534278931828-56973e4c4d52?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="مدينة">
+        <img src="IMG_5651.jpeg" class="d-block w-100" alt="مدينة">
       </div>
       <div class="carousel-item">
         <img src="https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="جبال">
