--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="IMG_5651.jpeg" class="d-block w-100" alt="مدينة">
       </div>
       <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?auto=format&fit=crop&w=900&q=60" class="d-block w-100" alt="جبال">
+        <img src="IMG_5652.jpeg" class="d-block w-100" alt="جبال">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
