--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <!-- الرياض -->
       <div class="col">
         <div class="card h-100">
-          <img src="https://images.unsplash.com/photo-1608112839549-dc1c46d3de7f?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="الرياض">
+          <img src="IMG_5653.jpeg" class="card-img-top" alt="الرياض">
           <div class="card-body">
             <h5 class="card-title">الرياض</h5>
             <p class="card-text">عاصمة المملكة العربية السعودية وتضم معالم حديثة وأسواق تراثية.</p>
