--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- جدة -->
       <div class="col">
         <div class="card h-100">
-          <img src="https://images.unsplash.com/photo-1593460681388-d9fd7fcd65a0?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="جدة">
+          <img src="IMG_5654.jpeg" class="card-img-top" alt="جدة">
           <div class="card-body">
             <h5 class="card-title">جدة</h5>
             <p class="card-text">مدينة ساحلية عصرية تُعرف بكورنيش البحر الأحمر والأسواق القديمة.</p>
