--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <!-- مكة -->
       <div class="col">
         <div class="card h-100">
-          <img src="https://images.unsplash.com/photo-1601221132217-1bbf43ba3b59?auto=format&fit=crop&w=800&q=60" class="card-img-top" alt="مكة">
+          <img src="IMG_5655.jpeg" class="card-img-top" alt="مكة">
           <div class="card-body">
             <h5 class="card-title">مكة المكرمة</h5>
             <p class="card-text">أقدس مدينة في الإسلام، تضم المسجد الحرام والكعبة المشرفة.</p>
