--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
     </button>
   </div>
 
+  <!-- نموذج حجز الفنادق -->
+  <div class="container my-5">
+    <h3 class="text-center mb-4">ابحث عن فندق</h3>
+    <form class="row g-3 justify-content-center" onsubmit="searchHotels(event)">
+      <div class="col-md-3">
+        <label for="city" class="form-label">المدينة</label>
+        <input type="text" class="form-control" id="city" required placeholder="مثلاً: الرياض">
+      </div>
+      <div class="col-md-3">
+        <label for="checkin" class="form-label">تاريخ الوصول</label>
+        <input type="date" class="form-control" id="checkin" required>
+      </div>
+      <div class="col-md-3">
+        <label for="checkout" class="form-label">تاريخ المغادرة</label>
+        <input type="date" class="form-control" id="checkout" required>
+      </div>
+      <div class="col-md-2">
+        <label for="guests" class="form-label">عدد الأشخاص</label>
+        <input type="number" class="form-control" id="guests" value="1" min="1" required>
+      </div>
+      <div class="col-md-12 text-center">
+        <button type="submit" class="btn btn-success px-5">ابحث</button>
+      </div>
+    </form>
+  </div>
+
   <!-- بطاقات المدن السياحية -->
   <div class="container">
     <h2 class="text-center mb-4">مدن سياحية</h2>
@@ -80,6 +106,23 @@
     </div>
   </div>
 
+  <!-- Bootstrap Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- JavaScript لحجز الفنادق -->
+  <script>
+    function searchHotels(event) {
+      event.preventDefault();
+      const city = document.getElementById("city").value;
+      const checkin = document.getElementById("checkin").value;
+      const checkout = document.getElementById("checkout").value;
+      const guests = document.getElementById("guests").value;
+
+      const url = `https://www.booking.com/searchresults.html?ss=${encodeURIComponent(city)}&checkin_year_month_monthday=${checkin}&checkout_year_month_monthday=${checkout}&group_adults=${guests}`;
+
+      window.open(url, '_blank');
+    }
+  </script>
+
 </body>
 </html>
