--- a/index.html
+++ b/index.html
@@ -1,58 +1,102 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>PayGo - حجوزات الفنادق</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PayGo Hotels</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(to bottom right, #f4f6f9, #e0e7ef);
+      background-color: #121212;
+      color: white;
       font-family: 'Segoe UI', sans-serif;
     }
     .search-box {
-      margin-top: 10vh;
-      background: white;
-      padding: 30px;
+      background-color: #1e1e1e;
       border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      padding: 25px;
+      margin-top: 60px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
-    .search-btn {
-      height: 100%;
+    .search-box input,
+    .search-box select {
+      margin-bottom: 15px;
+    }
+    .search-box label {
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    .search-box button {
+      width: 100%;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="search-box">
-      <h3 class="mb-4 text-center">ابحث عن أفضل عروض الفنادق حول العالم</h3>
-      <form id="hotelSearchForm" class="row g-3">
-        <div class="col-md-4">
-          <input type="text" name="city" class="form-control" placeholder="المدينة (مثال: دبي)" required>
+    <div class="search-box text-white">
+      <h4 class="text-center mb-4">ابحث عن فندقك المثالي</h4>
+      <form id="hotel-search-form">
+        <div class="mb-2">
+          <label>المدينة</label>
+          <input type="text" id="destination" class="form-control" placeholder="مثال: دبي" required />
         </div>
-        <div class="col-md-3">
-          <input type="date" name="checkin" class="form-control" required>
+        <div class="mb-2">
+          <label>تاريخ الوصول</label>
+          <input type="date" id="checkIn" class="form-control" required />
         </div>
-        <div class="col-md-3">
-          <input type="date" name="checkout" class="form-control" required>
+        <div class="mb-2">
+          <label>تاريخ المغادرة</label>
+          <input type="date" id="checkOut" class="form-control" required />
         </div>
-        <div class="col-md-2 d-grid">
-          <button type="submit" class="btn btn-primary search-btn">ابحث</button>
+        <div class="mb-2">
+          <label>عدد الغرف</label>
+          <select id="rooms" class="form-control">
+            <option value="1">1 غرفة</option>
+            <option value="2">2 غرف</option>
+            <option value="3">3 غرف</option>
+            <option value="4">4 غرف</option>
+          </select>
         </div>
+        <div class="mb-2">
+          <label>عدد البالغين</label>
+          <select id="adults" class="form-control">
+            <option value="1">1 بالغ</option>
+            <option value="2">2 بالغ</option>
+            <option value="3">3 بالغين</option>
+            <option value="4">4 بالغين</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label>عدد الأطفال</label>
+          <select id="kids" class="form-control">
+            <option value="0">بدون أطفال</option>
+            <option value="1">1 طفل</option>
+            <option value="2">2 أطفال</option>
+            <option value="3">3 أطفال</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary">بحث</button>
       </form>
     </div>
   </div>
 
   <script>
-    document.getElementById('hotelSearchForm').addEventListener('submit', function(e) {
+    document.getElementById("hotel-search-form").addEventListener("submit", function (e) {
       e.preventDefault();
-      const city = encodeURIComponent(this.city.value.trim());
-      const checkin = this.checkin.value;
-      const checkout = this.checkout.value;
-      const marker = '646029';
+      const dest = document.getElementById("destination").value;
+      const checkIn = document.getElementById("checkIn").value;
+      const checkOut = document.getElementById("checkOut").value;
+      const rooms = document.getElementById("rooms").value;
+      const adults = document.getElementById("adults").value;
+      const kids = document.getElementById("kids").value;
 
-      const url = `https://hotels.travelpayouts.com/search/${city}?marker=${marker}&checkin_date=${checkin}&checkout_date=${checkout}`;
-      window.location.href = url;
+      if (dest && checkIn && checkOut) {
+        const url = `https://hotels.travelpayouts.com/?marker=646029&language=ar&currency=sar&checkIn=${checkIn}&checkOut=${checkOut}&city=${encodeURIComponent(dest)}&adults=${adults}&children=${kids}&rooms=${rooms}`;
+        window.location.href = url;
+      } else {
+        alert("يرجى إدخال جميع البيانات.");
+      }
     });
   </script>
 </body>
