--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
             `&checkout_date=${checkOut}` +
             `&rooms=${rooms}` +
             `&adults=${adults}` +
-            `&children=${kids}`;
+            `&children=${kids}` +
+            `&language=ar&currency=sar`;
         window.location.href = url;
       } else {
         alert("يرجى إدخال جميع البيانات.");
