--- a/index.html
+++ b/index.html
@@ -1,112 +1,110 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PayGo Hotels</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>احجز فندقك</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #121212;
       color: white;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Tahoma', sans-serif;
     }
-    .search-box {
+    .booking-box {
+      max-width: 500px;
+      margin: 50px auto;
+      padding: 30px;
       background-color: #1e1e1e;
       border-radius: 15px;
-      padding: 25px;
-      margin-top: 60px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
     }
-    .search-box input,
-    .search-box select {
-      margin-bottom: 15px;
+    .form-control {
+      background-color: #2c2c2c;
+      color: white;
+      border: none;
     }
-    .search-box label {
-      font-size: 14px;
-      margin-bottom: 5px;
+    .form-control::placeholder {
+      color: #aaa;
     }
-    .search-box button {
+    .btn-primary {
+      background-color: #007bff;
+      border: none;
       width: 100%;
-      font-size: 18px;
+    }
+    a {
+      color: #00bfff;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="search-box text-white">
-      <h4 class="text-center mb-4">ابحث عن فندقك المثالي</h4>
-      <form id="hotel-search-form">
-        <div class="mb-2">
-          <label>المدينة</label>
-          <input type="text" id="destination" class="form-control" placeholder="مثال: دبي" required />
-        </div>
-        <div class="mb-2">
-          <label>تاريخ الوصول</label>
-          <input type="date" id="checkIn" class="form-control" required />
-        </div>
-        <div class="mb-2">
-          <label>تاريخ المغادرة</label>
-          <input type="date" id="checkOut" class="form-control" required />
-        </div>
-        <div class="mb-2">
-          <label>عدد الغرف</label>
-          <select id="rooms" class="form-control">
-            <option value="1">1 غرفة</option>
-            <option value="2">2 غرف</option>
-            <option value="3">3 غرف</option>
-            <option value="4">4 غرف</option>
-          </select>
-        </div>
-        <div class="mb-2">
-          <label>عدد البالغين</label>
-          <select id="adults" class="form-control">
-            <option value="1">1 بالغ</option>
-            <option value="2">2 بالغ</option>
-            <option value="3">3 بالغين</option>
-            <option value="4">4 بالغين</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label>عدد الأطفال</label>
-          <select id="kids" class="form-control">
-            <option value="0">بدون أطفال</option>
-            <option value="1">1 طفل</option>
-            <option value="2">2 أطفال</option>
-            <option value="3">3 أطفال</option>
-          </select>
-        </div>
-        <button type="submit" class="btn btn-primary">بحث</button>
-      </form>
-    </div>
-  </div>
 
-  <script>
-  document.getElementById("hotel-search-form").addEventListener("submit", function(e) {
+<div class="booking-box">
+  <h4 class="text-center mb-4">ابحث عن فندقك المثالي</h4>
+  <form id="booking-form">
+    <div class="mb-3">
+      <label class="form-label">المدينة</label>
+      <input type="text" id="city" class="form-control" placeholder="مثال: الرياض" required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">تاريخ الوصول</label>
+      <input type="date" id="checkin" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">تاريخ المغادرة</label>
+      <input type="date" id="checkout" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">عدد الغرف</label>
+      <select id="rooms" class="form-control">
+        <option value="1">1 غرفة</option>
+        <option value="2">2 غرف</option>
+        <option value="3">3 غرف</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">عدد البالغين</label>
+      <select id="adults" class="form-control">
+        <option value="1">1 بالغ</option>
+        <option value="2">2 بالغين</option>
+        <option value="3">3 بالغين</option>
+      </select>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">عدد الأطفال</label>
+      <select id="children" class="form-control">
+        <option value="0">بدون أطفال</option>
+        <option value="1">1 طفل</option>
+        <option value="2">2 أطفال</option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary">بحث</button>
+  </form>
+  <div id="link-container" class="mt-4 text-center"></div>
+</div>
+
+<script>
+  document.getElementById("booking-form").addEventListener("submit", function(e) {
     e.preventDefault();
 
-    const dest = document.getElementById("destination").value.trim();
-    const checkIn = document.getElementById("checkIn").value;
-    const checkOut = document.getElementById("checkOut").value;
+    const city = document.getElementById("city").value.trim();
+    const checkin = document.getElementById("checkin").value;
+    const checkout = document.getElementById("checkout").value;
     const rooms = document.getElementById("rooms").value;
     const adults = document.getElementById("adults").value;
-    const kids = document.getElementById("kids").value;
+    const children = document.getElementById("children").value;
 
-    if (!dest || !checkIn || !checkOut) {
-      return alert("يرجى إدخال جميع البيانات.");
-    }
+    const encodedCity = encodeURIComponent(city);
+    const url = `https://hotels.travelpayouts.com/search/${encodedCity}/?marker=646029&checkin_date=${checkin}&checkout_date=${checkout}&rooms=${rooms}&adults=${adults}&children=${children}&language=ar&currency=sar`;
 
-    const url = `https://hotels.travelpayouts.com/search/${encodeURIComponent(dest)}/?marker=646029` +
-                `&checkin_date=${checkIn}` +
-                `&checkout_date=${checkOut}` +
-                `&rooms=${rooms}` +
-                `&adults=${adults}` +
-                `&children=${kids}` +
-                `&language=ar&currency=sar`;
+    // ✅ عرض الرابط على الصفحة أيضاً
+    document.getElementById("link-container").innerHTML =
+      `<p>تم إنشاء الرابط:</p><a href="${url}" target="_blank">${url}</a>`;
 
-    console.log("🔗 Redirect URL:", url);  // *DEBUG* هذا الذي نحتاجه الآن
+    // ✅ فتح الرابط
     window.location.href = url;
   });
 </script>
+
 </body>
 </html>
