--- a/index.html
+++ b/index.html
@@ -3,106 +3,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>احجز فندقك</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <title>PayGo - حجز الفنادق</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
-      color: white;
-      font-family: 'Tahoma', sans-serif;
+      background-color: #f8f9fa;
     }
-    .booking-box {
-      max-width: 500px;
-      margin: 50px auto;
+    .booking-form {
+      background: white;
+      border-radius: 10px;
       padding: 30px;
-      background-color: #1e1e1e;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+      max-width: 600px;
+      margin: 50px auto;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-    .form-control {
-      background-color: #2c2c2c;
+    .btn-search {
+      background-color: #0d6efd;
       color: white;
-      border: none;
-    }
-    .form-control::placeholder {
-      color: #aaa;
-    }
-    .btn-primary {
-      background-color: #007bff;
-      border: none;
-      width: 100%;
-    }
-    a {
-      color: #00bfff;
     }
   </style>
 </head>
 <body>
 
-<div class="booking-box">
-  <h4 class="text-center mb-4">ابحث عن فندقك المثالي</h4>
-  <form id="booking-form">
+<div class="booking-form">
+  <h4 class="mb-4 text-center">احجز فندقك الآن</h4>
+  <form id="hotelForm">
     <div class="mb-3">
-      <label class="form-label">المدينة</label>
-      <input type="text" id="city" class="form-control" placeholder="مثال: الرياض" required>
+      <label for="city" class="form-label">المدينة</label>
+      <input type="text" class="form-control" id="city" required placeholder="مثال: دبي">
     </div>
+
     <div class="mb-3">
-      <label class="form-label">تاريخ الوصول</label>
-      <input type="date" id="checkin" class="form-control" required>
+      <label for="checkIn" class="form-label">تاريخ الوصول</label>
+      <input type="date" class="form-control" id="checkIn" required>
     </div>
+
     <div class="mb-3">
-      <label class="form-label">تاريخ المغادرة</label>
-      <input type="date" id="checkout" class="form-control" required>
+      <label for="checkOut" class="form-label">تاريخ المغادرة</label>
+      <input type="date" class="form-control" id="checkOut" required>
     </div>
+
     <div class="mb-3">
-      <label class="form-label">عدد الغرف</label>
-      <select id="rooms" class="form-control">
-        <option value="1">1 غرفة</option>
-        <option value="2">2 غرف</option>
-        <option value="3">3 غرف</option>
-      </select>
+      <label for="adults" class="form-label">عدد الأشخاص</label>
+      <input type="number" class="form-control" id="adults" value="2" min="1">
     </div>
+
     <div class="mb-3">
-      <label class="form-label">عدد البالغين</label>
-      <select id="adults" class="form-control">
-        <option value="1">1 بالغ</option>
-        <option value="2">2 بالغين</option>
-        <option value="3">3 بالغين</option>
-      </select>
+      <label for="rooms" class="form-label">عدد الغرف</label>
+      <input type="number" class="form-control" id="rooms" value="1" min="1">
     </div>
-    <div class="mb-3">
-      <label class="form-label">عدد الأطفال</label>
-      <select id="children" class="form-control">
-        <option value="0">بدون أطفال</option>
-        <option value="1">1 طفل</option>
-        <option value="2">2 أطفال</option>
-      </select>
-    </div>
-    <button type="submit" class="btn btn-primary">بحث</button>
+
+    <button type="submit" class="btn btn-search w-100">بحث</button>
   </form>
-  <div id="link-container" class="mt-4 text-center"></div>
 </div>
 
 <script>
-  document.getElementById("booking-form").addEventListener("submit", function(e) {
+  document.getElementById('hotelForm').addEventListener('submit', function(e) {
     e.preventDefault();
 
-    const city = document.getElementById("city").value.trim();
-    const checkin = document.getElementById("checkin").value;
-    const checkout = document.getElementById("checkout").value;
-    const rooms = document.getElementById("rooms").value;
-    const adults = document.getElementById("adults").value;
-    const children = document.getElementById("children").value;
+    const city = document.getElementById('city').value.trim();
+    const checkIn = document.getElementById('checkIn').value;
+    const checkOut = document.getElementById('checkOut').value;
+    const adults = document.getElementById('adults').value;
+    const rooms = document.getElementById('rooms').value;
 
-    const encodedCity = encodeURIComponent(city);
-    const url = `https://hotels.travelpayouts.com/search/${encodedCity}/?marker=646029&checkin_date=${checkin}&checkout_date=${checkout}&rooms=${rooms}&adults=${adults}&children=${children}&language=ar&currency=sar`;
-
-    // ✅ عرض الرابط على الصفحة أيضاً
-    document.getElementById("link-container").innerHTML =
-      `<p>تم إنشاء الرابط:</p><a href="${url}" target="_blank">${url}</a>`;
-
-    // ✅ فتح الرابط
-    window.location.href = url;
+    const baseUrl = "https://hotellook.tpo.lv/deLDIB0W";
+    const url = `${baseUrl}?location=${encodeURIComponent(city)}&checkIn=${checkIn}&checkOut=${checkOut}&adults=${adults}&rooms=${rooms}`;
+    window.open(url, '_blank');
   });
 </script>
 
