--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- مربع البحث -->
   <div class="search-box">
     <h4 class="mb-4 text-center">ابحث عن أفضل الفنادق بأقل الأسعار</h4>
-    <form action="https://hotellook.tpo.lv/" method="GET" target="_blank">
+    <form action="https://hotellook.tpo.lv/deLDIB0W" method="GET" target="_blank">
       <input type="hidden" name="marker" value="646029">
       <input type="hidden" name="currency" value="sar">
 
