--- a/index.html
+++ b/index.html
@@ -3,20 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paygo - البحث عن فنادق</title>
+  <title>Paygo - حجز الفنادق</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: #f8f9fa;
+      font-family: 'Tajawal', sans-serif;
+      padding: 40px 20px;
+    }
+    .form-box {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+    h2 {
+      margin-bottom: 20px;
       text-align: center;
-      font-family: Arial, sans-serif;
-      margin-top: 100px;
+      color: #007bff;
     }
   </style>
 </head>
 <body>
 
-<!-- نموذج البحث الرسمي من Travelpayouts -->
-<script src="https://tp.media/content?demo=true&currency=sar&trs=264013&shmarker=646029&target_host=search.hotellook.com%2F&locale=ar&searchUrl=search.hotellook.com%2F&widget_type=hotel&border_radius=12&width=600&primary=%23007bff&color_background=%23ffffff&dark=%23000000&light=%23ffffff&background=%23ffffff&special=%23007bff&powered_by=false&version=2" charset="utf-8"></script>
+<div class="form-box">
+  <h2>ابحث عن فندق الآن</h2>
+  <form action="https://search.hotellook.com/" method="GET" target="_blank">
+    <input type="hidden" name="marker" value="646029">
+    <input type="hidden" name="language" value="ar">
+    <div class="mb-3">
+      <label class="form-label">المدينة</label>
+      <input type="text" name="location" class="form-control" placeholder="مثال: دبي" required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">تاريخ الوصول</label>
+      <input type="date" name="checkIn" class="form-control" required>
+    </div>
+    <div class="mb-3">
+      <label class="form-label">تاريخ المغادرة</label>
+      <input type="date" name="checkOut" class="form-control" required>
+    </div>
+    <button type="submit" class="btn btn-primary w-100">ابحث عن فنادق</button>
+  </form>
+</div>
 
 </body>
 </html>
