--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     }
 
     .hero {
-      background: url('https://i.gifer.com/7efs.gif') center/cover no-repeat;
+      background: url('https://media.giphy.com/media/51qUNLs2Z4y9JzviBio/giphy.gif') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 60px 20px; /* تقليل الارتفاع */
+      padding: 60px 20px;
       position: relative;
     }
 
     .hero h1 {
       font-size: 2.2rem;
       font-weight: bold;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
+    }
+
+    .hero p {
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
     }
 
     .destination img {
