--- a/home.html
+++ b/home.html
@@ -69,7 +69,7 @@
 </head>
 <body>
   <header>
-    <img src="paygo.png" alt="PayGo Logo">
+    <img src="PAIGO.png" alt="PayGo Logo">
   </header>
 
   <div class="destinations">
