--- a/home.html
+++ b/home.html
@@ -22,8 +22,11 @@
       text-align: center;
     }
     header img {
-      max-height: 50px;
+      max-height: 90px;
+      width: auto;
       vertical-align: middle;
+      margin: auto;
+      display: block;
     }
     .destinations {
       display: flex;
