--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 </head>
 <body>
   <header>
-    <img src="paygo.png" alt="PayGo Logo">
+    <img src="paygs.png" alt="PayGo Logo">
   </header>
 
   <div class="destinations">
